--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.846.0",
+    "@aws-sdk/s3-request-presigner": "^3.887.0",
     "@prisma/client": "^6.11.1",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
