--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/client-s3": "^3.846.0",
     "@aws-sdk/s3-request-presigner": "^3.887.0",
     "@prisma/client": "^6.11.1",
+    "archiver": "^7.0.1",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.3",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
